k8s/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: <namespace-label>       # default value: use namespace
  name: <namespace>
