k8s/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <service-name>
  namespace: <namespace>
spec:
  ports:
  - name: http-port
    protocol: TCP
    port: 80
    targetPort: <container-port>
  selector:
    app: <pod-label>
  type: ClusterIP
